# my_scraping_tool

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  selector.csv  selector.txt
config/: settings.yml
config/test/: settings.yml
config/test/css_selectors/: for_attribute_value.csv  for_element_value.csv
config/test/urls/: for_css_selector.txt  for_http_status.txt  for_url_list.txt
docker_files/: Dockerfile
http_status/: __main__.py
models/: css_selector.py  result.py  url_list.py
my_scraping_tool/: __main__.py
my_scraping_tool/models/: result.py  url_list.py  web_page.py  web_page_css_select.py  web_page_status.py
my_scraping_tool/models/config/: css_selector.py  settings.py
my_scraping_tool/models/web/: page.py  user_agent.py
my_scraping_tool/script/get_value/: __main__.py
my_scraping_tool/services/: base.py  element_value_getter.py  http_status_getter.py  scraping.py
script/get_value/: __main__.py
script/http_status/: __main__.py
tests/: conftest.py
tests/models/: test_css_selector.py  test_result.py  test_url_list.py  test_web_page.py  test_web_page_css_select.py  test_web_page_status.py
tests/models/config/: test_css_selector.py  test_settings.py  test_url_list.py
tests/models/web/: test_page.py  test_user_agent.py
tests/service/: test_scraping.py
tests/services/: test_base.py  test_element_value_getter.py  test_http_status_getter.py  test_scraping.py
value_getter/: __main__.py
